--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,7 +1,3 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Hello welcome</h1>
+﻿<h1>Hello welcome</h1>
+<a asp-action="Index" asp-controller="Home">View WishList</a>
 
