--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
 ﻿<h1>Hello welcome</h1>
-<a asp-action="Index" asp-controller="Home">View WishList</a>
+<a asp-action="Index" asp-controller="Item">View WishList</a>
 
